fix(toolbar): adjust select job button to align properly

--- a/src/app/modules/toolbar/components/class-job-selection/class-job-selection.component.scss
+++ b/src/app/modules/toolbar/components/class-job-selection/class-job-selection.component.scss
@@ -1,15 +1,20 @@
 :host {
   position: relative;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
   padding-right: 12px;
+  display: flex;
 }
 
 .rh-job-selection {
+  &__toggle {
+    padding-left: 12px;
+  }
+
   &__active-class-job {
     display: inline-flex;
     vertical-align: middle;
     align-items: center;
-    margin: 0 4px 0 10px;
+    margin: 0 4px 0 0;
   }
 
   &__active-class-job-image {
